Update 'ppkwlb8yk-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:6b74658f3402797b00b7f69cd725342a0d84b441@sha256:41daffa48704e8e78ac0111b780f81bb53643110a10a6d466f1efeb9e570832b

--- a/components/ppkwlb8yk-python/overlays/development/deployment-patch.yaml
+++ b/components/ppkwlb8yk-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ppkwlb8yk-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:6b74658f3402797b00b7f69cd725342a0d84b441@sha256:41daffa48704e8e78ac0111b780f81bb53643110a10a6d466f1efeb9e570832b
+          name: container-image
